--- a/todo.1
+++ b/todo.1
@@ -1,6 +1,8 @@
 
-1. Test it
-2. Get it to run a pandoc conversion
+
+*1. Test it
+*2. Get it to run a pandoc conversion
 3. Add a redis fetcher
-4. 
+
+0. /metrics - # of documents processed, etc.
 
