1st successful redis data pass

--- a/todo.1
+++ b/todo.1
@@ -1,8 +1,28 @@
 
-
-*1. Test it
-*2. Get it to run a pandoc conversion
-3. Add a redis fetcher
++3. Add a redis fetcher
++4. Check "params for key"
+	main.go:69
+	authkey := conf.GetString("auth-key", "ya, no api key specified")
 
 0. /metrics - # of documents processed, etc.
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+--done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done--
+--done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done--
+--done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done-- --done--
+*1. Test it
+*2. Get it to run a pandoc conversion
